ready with implementation, documentation en testing still to do